# ts_pit

./: .cursorrules  .gitignore  AGENTS.md  AI_RECOMMENDATION_LOGIC.md  README.md  SCORING_METHODOLOGY.md  commit_message.txt  config.docker.yaml  config.yaml  docker-compose.yml  langgraph.json  main.py  pyproject.toml  test.js  test.py
backend/: Dockerfile  README.md  alert_analysis.py  azure_llm.py  config.py  config.yaml  database.py  langgraph.json  llm.py  logger.py  main.py  openapi.yaml  prices.py  prompts.py  pyproject.toml  reporting.py  schemas.py  scoring.py
backend/agent/: db_schema.yaml  domain_knowledge.md  graph.py  prompts.py  state.py  tools.py
backend/agent_v2/: graph.py  prompts.py  python_env.py  state.py  tools.py
backend/agent_v3/: __init__.py  correction.py  execution.py  graph.py  planning.py  prompts.py  responding.py  rewriting.py  state.py  tools.py  utilis.py  validation.py
backend/agent_v3/prompts/: execution.yaml  planner.yaml  respond.yaml
backend/api/routers/: agent.py  alerts.py  market.py  settings.py
backend/db/: validator.py
backend/libs/safe_py_runner/: LICENSE  README.md  SECURITY.md  pyproject.toml
backend/libs/safe_py_runner/tests/: test_io.py  test_limits.py  test_runner.py  test_security.py
backend/scripts/: _script_runner.py  calc_impact_scores.py  calc_prominence.py  check_safe_py_runner_env.py  cli.py  data_ops.py  db_ops.py  dev_checks.py  export_openapi.py  fetch_price.py  generate_dummy_data.py  generate_schema.py  market_data.py  migrate_alert_analysis_table.py  migrate_impact_labels.py  migrate_materiality.py  migrate_statuses.py  remove_alert_analysis_columns.py  remove_articles_p1_prominence.py  schema_ops.py  scoring_ops.py  test_logging_config.py  test_p3_mapping.py  test_tools.py  update_summaries.py  validate_schema.py  verify_impact_labels.py  verify_scripts_imports.py
backend/services/: alert_analysis_data.py  alert_analysis_store.py  alert_normalizer.py  db_helpers.py  price_cache.py
backend/src/ts_pit/: alert_analysis.py  azure_llm.py  config.py  llm.py  market_data.py  observability.py  prices.py  reporting.py  scoring.py
backend/src/ts_pit/agent/: __init__.py  graph.py  prompts.py  tools.py
backend/src/ts_pit/agent_v2/: graph.py  (+2 more)
backend/static/: index.html
backend/static/assets/: DashboardLayout-7hCoaN-W.css  DashboardLayout-B5XSBoY8.css  DashboardLayout-BDwf58ms.js  DashboardLayout-BLDggu4_.js  DashboardLayout-CC-im_ZT.css  DashboardLayout-CDpG_jId.css  DashboardLayout-CHk-w50L.css  DashboardLayout-CSk5tPgu.js  DashboardLayout-CU6tnM4v.js  DashboardLayout-ChkYI9HA.js  DashboardLayout-D4-kg1J8.css  DashboardLayout-DFnJPRoB.js  DashboardLayout-DNdTY2rZ.js  DashboardLayout-DjPirIZx.js  DashboardLayout-OXBPBCE4.js  DashboardLayout-YFsk4jDe.js  DashboardLayout-uu3upsNr.css  DashboardLayout-yfEGU6x7.js  index-BJp19CAN.css  index-BMCX5OjO.css  index-BOVGFBso.js  index-BQoq-enn.css  index-BXtAp9Ii.css  index-BqoDj_m-.js  index-CBTvGgF5.js  index-C_dgPjtq.css  index-DNXui8XG.css  index-DNtpuQU6.js  index-D_ETb1lE.css  index-DbohezkF.css  index-DcVnkouY.js  index-DmlWfkAu.js  index-DoiMF7dH.js  index-Du0vHCuW.js  index-EGfHZm-Z.js  index-FhapBwaF.css  index-HxpYOd35.css  index-YsEDVpSW.js  index-hn0Fkldr.js  index-jL9detDn.css
backend/tests/: test_azure_llm_streaming.py  test_llm_cluster_summary.py  test_llm_langfuse_wiring.py  test_observability_langfuse.py  test_scoring.py
backend/tests/agent_v2/: test_execute_python_tool.py  test_execute_sql_tool.py  test_tool_error_retry.py
backend/tests/agent_v3/: test_clarification_routing.py  test_execution_deterministic.py  test_master_execution_routing.py  test_news_query_expansion.py  test_planning_deterministic.py  test_tools_get_articles_by_tickers.py  test_tools_search_web.py
backend/tests/api/: test_agent_streaming.py  test_market_prices.py
backend/tests/services/: test_alert_analysis_data.py  test_alert_analysis_enrichment.py  test_alert_analysis_policy.py  test_alert_normalizer.py  test_price_cache.py
libs/safe_py_runner/: README.md  pyproject.toml
libs/safe_py_runner/tests/: test_runner.py
(+125 files in other folders)
